hphp/hack/test/sound_dynamic/typing/keyset_create.bad.php.exp
File "keyset_create.bad.php", line 4, characters 3-17:
Some elements in this collection are incompatible (Typing[4110])
  File "keyset_create.bad.php", line 4, characters 10-12:
  Expected `int`
  File "keyset_create.bad.php", line 3, characters 12-18:
  But got `arraykey`
