hphp/hack/test/sound_dynamic/typing/keyset_create.bad.php
<?hh

function f(dynamic $d) : void {
  keyset<int>[$d];
}
